--- a/functional_programming/functional.ipynb
+++ b/functional_programming/functional.ipynb
@@ -8,6 +8,169 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "An example of a simple user defined function that returns a Hello and the name of the user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sayhello(name):\n",
+    "    print(\"Hello, \" + name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Rob\n"
+     ]
+    }
+   ],
+   "source": [
+    "hello = sayhello\n",
+    "hello(\"Rob\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'John Doe', 'age': 50}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# set an environment variable\n",
+    "ENVIRONMENT = 'prod'\n",
+    "\n",
+    "def fetch_person1():\n",
+    "    return {\n",
+    "        'name': 'John Doe',\n",
+    "        'age': 50\n",
+    "    }\n",
+    "\n",
+    "def fetch_person2():\n",
+    "    return {\n",
+    "        'name': 'Jane Doe',\n",
+    "        'age': 34\n",
+    "    }\n",
+    "\n",
+    "getdata = fetch_person1 if ENVIRONMENT == 'prod' else fetch_person2\n",
+    "data = getdata()\n",
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some mathematical operations using user defined functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math  # import math module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def double(x):\n",
+    "    return x * 2\n",
+    "\n",
+    "def squared(x):\n",
+    "    return x * x\n",
+    "\n",
+    "def exponent(x):\n",
+    "    return math.exp(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fn_list = [\n",
+    "    exponent,\n",
+    "    squared,\n",
+    "    double,\n",
+    "    math.sqrt,\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define a random number\n",
+    "from random import randint\n",
+    "my_number = randint(1, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_number)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[403.4287934927351, 36, 12, 2.449489742783178]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[func(my_number) for func in fn_list]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -25,8 +188,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.10.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.2"
   },
   "orig_nbformat": 4
  },
