--- a/functional_programming/functional.ipynb
+++ b/functional_programming/functional.ipynb
@@ -171,6 +171,185 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "more mathematical operations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "def subtract(a, b):\n",
+    "    return a - b\n",
+    "\n",
+    "def multiply(a, b):\n",
+    "    return a * b\n",
+    "\n",
+    "def power(a, b):\n",
+    "    return a ** b\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n",
+      "-44\n",
+      "50\n",
+      "8000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(add(20, 30))\n",
+    "print(subtract(-10, 34))\n",
+    "print(multiply(5, 10))\n",
+    "print(power(20, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# defining lambda functions with the same content as above\n",
+    "add = lambda a, b: a + b\n",
+    "subtract = lambda a, b: a - b\n",
+    "multiply = lambda a, b: a * b\n",
+    "power = lambda a, b: a ** b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add(20, 30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "this function combines names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def combine(func):\n",
+    "    return func(\"John\", \"Doe\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_government_form_notation(first, last):\n",
+    "    return f'{last.upper()}, {first.upper()}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DOE, JOHN\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(combine(get_government_form_notation))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "create a printer function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_printer():\n",
+    "    def printer():\n",
+    "        print('Hello World!')\n",
+    "\n",
+    "    return printer\n",
+    "\n",
+    "printing = create_printer()\n",
+    "printing()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_printer2():\n",
+    "    return lambda: print('Hello World!')\n",
+    "\n",
+    "printing2 = create_printer2()\n",
+    "printing2()\n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
