--- a/functional_programming/functional.ipynb
+++ b/functional_programming/functional.ipynb
@@ -350,6 +350,354 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "create a multiplier function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "90\n",
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_multiplier(x):\n",
+    "    return lambda y: x * y\n",
+    "\n",
+    "double = create_multiplier(2)\n",
+    "triple = create_multiplier(3)\n",
+    "tenfold = create_multiplier(10)\n",
+    "\n",
+    "print(double(10))\n",
+    "print(triple(30))\n",
+    "print(tenfold(100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the favourite number is 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_number():\n",
+    "    \"This function returns the user's favourite number\"\n",
+    "    fav_number = 100\n",
+    "    return lambda x: f\"the favourite number is {fav_number}\"\n",
+    "\n",
+    "num = get_number()\n",
+    "print(num(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def counter():\n",
+    "    \"this function returns a function that counts up\"\n",
+    "    count = 0\n",
+    "    def getcount(): return count\n",
+    "    def increment(): nonlocal count; count += 1\n",
+    "    return (getcount, increment)\n",
+    "\n",
+    "getcount, increment = counter()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "12\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(getcount())\n",
+    "increment()\n",
+    "increment()\n",
+    "print(getcount())\n",
+    "increment()\n",
+    "increment()\n",
+    "increment()\n",
+    "print(getcount())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def divide(x, y):\n",
+    "    \"this function returns the quotient of two numbers\"\n",
+    "    return x / y\n",
+    "\n",
+    "def sec_arg_isnt_zero(func):\n",
+    "    \"this function returns a function that checks if the second argument is zero\"\n",
+    "    return lambda x, y: func(x, y) if y != 0 else print('Warning: second argument is zero')\n",
+    "\n",
+    "dividesafe = sec_arg_isnt_zero(divide)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m/Users/rob_the_programmer/Documents/programming/2022/python_university_programming/functional_programming/functional.ipynb Cell 31'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/rob_the_programmer/Documents/programming/2022/python_university_programming/functional_programming/functional.ipynb#ch0000031?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(divide(\u001b[39m10\u001b[39;49m, \u001b[39m0\u001b[39;49m))\n",
+      "\u001b[1;32m/Users/rob_the_programmer/Documents/programming/2022/python_university_programming/functional_programming/functional.ipynb Cell 30'\u001b[0m in \u001b[0;36mdivide\u001b[0;34m(x, y)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rob_the_programmer/Documents/programming/2022/python_university_programming/functional_programming/functional.ipynb#ch0000030?line=0'>1</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdivide\u001b[39m(x, y):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rob_the_programmer/Documents/programming/2022/python_university_programming/functional_programming/functional.ipynb#ch0000030?line=1'>2</a>\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mthis function returns the quotient of two numbers\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/rob_the_programmer/Documents/programming/2022/python_university_programming/functional_programming/functional.ipynb#ch0000030?line=2'>3</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m x \u001b[39m/\u001b[39;49m y\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "print(divide(10, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: second argument is zero\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dividesafe(10, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(divide(10, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dividesafe(10, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define a list of numbers from 0 to 10\n",
+    "numbers = list(range(11))\n",
+    "doubled = list()\n",
+    "\n",
+    "result = list(map(lambda x: x * 2, numbers))\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "more procedural way of doing the above"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers_list = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "doubled_list = []\n",
+    "for x in numbers_list:\n",
+    "    doubled_list.append(x * 2)\n",
+    "\n",
+    "print(doubled_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "another way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = list(range(10, 21))\n",
+    "def double(x): return x * 2\n",
+    "\n",
+    "doubled_list = list(map(double, nums))\n",
+    "print(doubled_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "procedural way to get a list of even numbers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "evens = []\n",
+    "for x in nums:\n",
+    "    if x % 2 == 0:\n",
+    "        evens.append(x)\n",
+    "\n",
+    "print(evens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "functional way:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = list(range(11))\n",
+    "def is_even(x): return x % 2 == 0\n",
+    "\n",
+    "even_nums = list(filter(is_even, n))\n",
+    "print(even_nums)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums1 = list(range(10, 21))\n",
+    "double = lambda x: x * 2\n",
+    "doubled = list(map(double, nums1))\n",
+    "print(doubled)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
