updated functions, new file

--- a/functional_programming/functional.ipynb
+++ b/functional_programming/functional.ipynb
@@ -859,6 +859,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "usibng reduce from the functools library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import reduce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "acc is 0 and x is 1\n",
+      "acc is 1 and x is 2\n",
+      "acc is 3 and x is 3\n",
+      "acc is 6 and x is 4\n",
+      "acc is 10 and x is 5\n",
+      "acc is 15 and x is 6\n",
+      "acc is 21 and x is 7\n",
+      "acc is 28 and x is 8\n",
+      "acc is 36 and x is 9\n",
+      "acc is 45 and x is 10\n",
+      "acc is 55 and x is 11\n",
+      "acc is 66 and x is 12\n",
+      "acc is 78 and x is 13\n",
+      "acc is 91 and x is 14\n",
+      "acc is 105 and x is 15\n",
+      "acc is 120 and x is 16\n",
+      "acc is 136 and x is 17\n",
+      "acc is 153 and x is 18\n",
+      "acc is 171 and x is 19\n",
+      "acc is 190 and x is 20\n",
+      "210\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = list(range(21))\n",
+    "\n",
+    "def getsum(acc, x): \n",
+    "    print(f\"acc is {acc} and x is {x}\")\n",
+    "    return acc + x\n",
+    "\n",
+    "sum = reduce(getsum, nums)\n",
+    "print(sum)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
