--- a/functional_programming/functional.ipynb
+++ b/functional_programming/functional.ipynb
@@ -862,7 +862,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "usibng reduce from the functools library"
+    "using reduce from the functools library"
    ]
   },
   {
