added code to programs

--- a/programs/programs.ipynb
+++ b/programs/programs.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Find the factor of a number"
+    "1. Find the prime factor of a number"
    ]
   },
   {
@@ -53,6 +53,43 @@
     "    print(getprimefactors(150))\n",
     "    print(getprimefactors(77))\n",
     "    print(getprimefactors(980))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Identify a palindrome"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def ispalindrome(sentence):\n",
+    "    \"\"\"Returns True if the given sentence is a palindrome, False otherwise\"\"\"\n",
+    "    # Remove all non-alphanumeric characters\n",
+    "    sentence = re.sub(r'[^a-zA-Z0-9]', '', sentence.lower())\n",
+    "    # Check if the sentence is a palindrome\n",
+    "    return sentence == sentence[::-1]\n",
+    "\n",
+    "if __name__=='__main__':\n",
+    "    print(ispalindrome('hello world'))\n",
+    "    print(ispalindrome(\"Go hang a salami, I'm a lasagna hog.\"))\n",
+    "    "
    ]
   },
   {
