--- a/programs/programs.ipynb
+++ b/programs/programs.ipynb
@@ -93,6 +93,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. A program to sort words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bike car helicopter plane\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sortwords(input):\n",
+    "    \"Returns a string wit the words in alphabetical order\"\n",
+    "    return ' '.join(sorted(input.split(), key=str.casefold)) # casefold is a method of str\n",
+    "\n",
+    "if __name__=='__main__':\n",
+    "    print(sortwords('plane car bike helicopter'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. find all list items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0, 1], [0, 1], [1, 1]]\n",
+      "[[0, 0], [1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def indexall(search_list, item):\n",
+    "    indices = list()\n",
+    "    for i in range(len(search_list)):\n",
+    "        if search_list[i] == item:\n",
+    "            indices.append([i])\n",
+    "        elif isinstance(search_list[i], list):\n",
+    "            for index in indexall(search_list[i], item):\n",
+    "                indices.append([i]+index)\n",
+    "    return indices\n",
+    "\n",
+    "if __name__ == '__main__':    \n",
+    "    example = [[[1, 2, 3], 2, [1, 3]], [1, 2, 3]]\n",
+    "    print(indexall(example, 2))\n",
+    "    print(indexall(example, [1, 2, 3]))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
