--- a/programs/programs.ipynb
+++ b/programs/programs.ipynb
@@ -160,6 +160,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Play the waiting game"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Your target time is 4 seconds\n",
+      "\n",
+      "Elapsed time: 3.768 seconds\n",
+      "(0.232 seconds too fast)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import random\n",
+    "\n",
+    "def waiting_game():\n",
+    "    target = random.randint(2,4) # target seconds to wait\n",
+    "    print('\\nYour target time is {} seconds'.format(target))\n",
+    "    \n",
+    "    input(' ---Press Enter to Begin--- ')\n",
+    "    start = time.perf_counter()\n",
+    "    \n",
+    "    input('\\n...Press Enter again after {} seconds...'.format(target))\n",
+    "    elapsed = time.perf_counter() - start\n",
+    "    \n",
+    "    print('\\nElapsed time: {0:.3f} seconds'.format(elapsed))\n",
+    "    if elapsed == target:\n",
+    "        print('(Unbelievable! Perfect timing!)')\n",
+    "    elif elapsed < target:\n",
+    "        print('({0:.3f} seconds too fast)'.format(target - elapsed))\n",
+    "    else:\n",
+    "        print('({0:.3f} seconds too slow)'.format(elapsed - target))\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    waiting_game()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
