--- a/programs/programs.ipynb
+++ b/programs/programs.ipynb
@@ -210,6 +210,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "save a dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'a', 2: 'b', 3: 'c'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "def savedict(dict_to_save, file_path):\n",
+    "    with open(file_path, 'wb') as file:\n",
+    "        pickle.dump(dict_to_save, file)\n",
+    "    \n",
+    "def loaddict(file_path):\n",
+    "    with open(file_path, 'rb') as file:\n",
+    "        return pickle.load(file)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    test_dict = {1: 'a', 2: 'b', 3: 'c'}\n",
+    "    savedict(test_dict, 'test_dict.pickle')\n",
+    "    recovered = loaddict('test_dict.pickle')\n",
+    "    print(recovered)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
