--- a/programs/programs.ipynb
+++ b/programs/programs.ipynb
@@ -256,35 +256,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'winsound'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/rob_the_programmer/Documents/programming/2022/python_university_programming/programs/programs.ipynb Cell 15'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rob_the_programmer/Documents/programming/2022/python_university_programming/programs/programs.ipynb#ch0000013?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39msched\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rob_the_programmer/Documents/programming/2022/python_university_programming/programs/programs.ipynb#ch0000013?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtime\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/rob_the_programmer/Documents/programming/2022/python_university_programming/programs/programs.ipynb#ch0000013?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mwinsound\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mws\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rob_the_programmer/Documents/programming/2022/python_university_programming/programs/programs.ipynb#ch0000013?line=4'>5</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mset_alarm\u001b[39m(alarm_time, wav_file, message):\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rob_the_programmer/Documents/programming/2022/python_university_programming/programs/programs.ipynb#ch0000013?line=5'>6</a>\u001b[0m     s \u001b[39m=\u001b[39m sched\u001b[39m.\u001b[39mscheduler(time\u001b[39m.\u001b[39mtime, time\u001b[39m.\u001b[39msleep)\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'winsound'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import sched\n",
-    "import time\n",
-    "import winsound as ws\n",
+    "# import sched\n",
+    "# import time\n",
+    "# # import winsound as ws # does not work with mac\n",
+    "# import pygame as pg\n",
+    "# pg.init()\n",
+    "# pg.mixer.init()\n",
+    "# sound = pg.mixer.Sound(\"/Users/rob_the_programmer/Documents/programming/2022/python_university_programming/programs/07 Set an Alarm/alarm.wav\")\n",
+    "# sound.play()\n",
     "\n",
-    "def set_alarm(alarm_time, wav_file, message):\n",
-    "    s = sched.scheduler(time.time, time.sleep)\n",
-    "    s.enterabs(alarm_time, 1, print, argument=(message,))\n",
-    "    s.enterabs(alarm_time, 1, ws.PlaySound, argument=(wav_file, ws.SND_FILENAME))\n",
-    "    print('Alarm set for', time.asctime(time.localtime(alarm_time)))\n",
-    "    s.run()\n",
+    "# def set_alarm(alarm_time, wav_file, message):\n",
+    "#     s = sched.scheduler(time.time, time.sleep)\n",
+    "#     s.enterabs(alarm_time, 1, print, argument=(message,))\n",
+    "#     s.enterabs(alarm_time, 1, pg.PlaySound, argument=(wav_file, pg.SND_FILENAME))\n",
+    "#     print('Alarm set for', time.asctime(time.localtime(alarm_time)))\n",
+    "#     s.run()\n",
     "\n",
-    "if __name__ == '__main__':    \n",
-    "    set_alarm(time.time()+1, 'alarm.wav', 'Wake up!')"
+    "# if __name__ == '__main__':    \n",
+    "#     set_alarm(time.time()+1, 'alarm.wav', 'Wake up!')"
    ]
   },
   {
