updated oop file

--- a/object_oriented/object_oriented.ipynb
+++ b/object_oriented/object_oriented.ipynb
@@ -58,6 +58,132 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "using the __init__ function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Punisher War Zone by Marvel Comics\n",
+      "The Punisher War Zone\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ComicBook:\n",
+    "    def __init__(self, title, publisher):\n",
+    "        self.title = title\n",
+    "        self.publisher = publisher\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"{self.title} by {self.publisher}\"\n",
+    "\n",
+    "comic = ComicBook(\"The Punisher War Zone\", \"Marvel Comics\")\n",
+    "\n",
+    "print(comic)\n",
+    "print(comic.title)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "defining instance methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30000\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle:\n",
+    "    def __init__(self, make, model, year, price):\n",
+    "        self.make = make\n",
+    "        self.model = model\n",
+    "        self.year = year\n",
+    "        self.price = price\n",
+    "        self.__secret = \"This is a secret attribute\"\n",
+    "\n",
+    "    def setdiscount(self, amount):\n",
+    "        self._discount = amount\n",
+    "\n",
+    "    def getprice(self):\n",
+    "        if hasattr(self, \"_discount\"):\n",
+    "            return self.price - (self.price * self._discount)\n",
+    "        else:\n",
+    "            return self.price\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"{self.year} {self.make} {self.model}\"\n",
+    "\n",
+    "vehicle1 = Vehicle(\"Ford\", \"Fiesta\", 2019, 30000)\n",
+    "vehicle2 = Vehicle(\"Toyota\", \"Corolla\",2017, 20000)\n",
+    "vehicle3 = Vehicle(\"Tesla\", \"Model S\", 2019, 50000)\n",
+    "\n",
+    "print(vehicle1.getprice())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20000\n",
+      "15000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# set the discount\n",
+    "print(vehicle2.getprice())\n",
+    "vehicle2.setdiscount(0.25)\n",
+    "print(vehicle2.getprice())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Vehicle' object has no attribute '_discount'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m/Users/rob_the_programmer/Documents/programming/2022/python_university_programming/object_oriented/object_oriented.ipynb Cell 8'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/rob_the_programmer/Documents/programming/2022/python_university_programming/object_oriented/object_oriented.ipynb#ch0000007?line=0'>1</a>\u001b[0m \u001b[39mprint\u001b[39m(vehicle3\u001b[39m.\u001b[39;49m_discount)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'Vehicle' object has no attribute '_discount'"
+     ]
+    }
+   ],
+   "source": [
+    "print(vehicle3._discount) # this is a private attribute hidden from the interpreter"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
